# RetroForth 2021.7 (In-Progress) Release Notes

## Core Language

## Major Changes

- address 5 is now a pointer to `interpret`
- address 6 is now a pointor to `err:notfound`

## Added

- `if:` and `-if:`

## Renamed

## I/O

## Toolchain

## VM

- nga-nim

  - fix bug in VM_SH
  - minor formatting adjustments
  - start work to report some errors

## Examples

- add archive, archive-info, archive-extract
- add delete-file

## Documentation

- removed references to old command line arguments
- removed reference to the no longer existing "ok" prompt
- add a note that mentions that Retro does not display a prompt